<resources>
    <string name="app_name">Cloud9</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="CAM">CAM</string>
    <string name="Send">Send</string>
    <string name="Hint">Type your message here</string>
    <string name="title_activity_maps">Map</string>
    <string name="backBtn">Back</string>
    <string name="title_activity_maps_for_input">Map</string>
</resources>
